--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Nadir profile picture" />
+        <img src="./assets/profile-pic-nad.jpg" alt="Nadir profile picture" class="profile-pic"/>
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -46,7 +46,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Nadir_sahllal.pdf')"
           >
             Download Resume
           </button>
@@ -69,6 +69,30 @@
           />
         </div>
       </div>
+    </section>
+    <section id="about">
+      <p class="section__text__p1"> Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+            <img src="./assets/about-me-nad.JPG" alt="Profile picture" class="about-pic" />
+        </div>
+        <div class="about-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <img src="./assets/experience.png" alt="Experience icon" class="icon">
+                    <h3>Experience</h3>
+                    <p>4+ years <br/> Machine Learning and Software developement</p>
+                </div>
+                <div class="details-container">
+                    <img src="./assets/education.png" alt="Education icon" class="icon">
+                    <h3>Education</h3>
+                    <p>Doctorate in Computer Science and Mathematics <br/> Master's in codes Cryptography and Information Security</p>
+                </div>
+            </div>
+        </div>
+      </div>
+      <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
     </section>
     <script src="script.js"></script>
   </body>
