--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
           />
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#about'"
+      />
     </section>
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
@@ -341,6 +347,45 @@
         onclick="location.href='./#contact'"
       />
     </section>
+    <section id="contact">
+      <p class="section__text__p1">Get In Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p>
+            <a href="mailto:exampleemail@gmail.com"></a>Sahllal.nadir@gmail.com
+          </p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p>
+            <a href="https://LinkedIn.com/in/nadirsahllal/"></a>/nadirsahllal
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <div class="nac-links-container">
+          <ul class="nav-links">
+            <li><a href="#about"> About</a></li>
+            <li><a href="#experience"> Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2024 Nadir Sahllal. All Rights Reserved</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
