changing colors and adding closing option of chat

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     />
   </head>
   <body>
-    <div class="show-chatbot">
-
     
     <button class="chatbot-toggler">
       <span class="material-symbols-outlined">mode_comment</span>
@@ -22,7 +20,7 @@
     <div class="chatbot"> 
       <header>
         <h2>Chatting Buddy</h2>
-        <span class="material-symbols-outlined">close</span>
+        <span class="close-btn material-symbols-outlined">close</span>
       </header>
       <ul class="chatbox">
         <li class="chat incoming">
@@ -36,7 +34,6 @@
         <span id="send-btn" class="material-symbols-outlined">send</span>
       </div>
     </div>
-  </div>
     <nav id="desktop-nav">
       <div class="logo">Nadir Sahllal</div>
       <div>
